[package]
name = "sanitize_html"
version = "0.8.1"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
description = "Rule-based HTML Sanitization library"
keywords = ["html", "sanitize"]
license = "MIT"
homepage = "https://github.com/andy128k/sanitize-html-rs"
repository = "https://github.com/andy128k/sanitize-html-rs.git"
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
